-[g:respond.js]から[g:css3-mediaqueries.js]に変更しました。
-シンタックスハイライトのテーマを変更しました。またhighlight.jsのロード方法も変更しました。
-【テーマ】配色カスタマイズ画面で、色を濃くしたり明るくしたりできるようにしました。((色を薄くまたは暗くしかできなかったという（苦笑）))
-【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
-【テーマ】satsuki2系テーマで、サイドバーサイズを固定にしました。
-【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
-【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
-【fix】行連結記法が使えない。((β3直後に完全にエンバグしてました。必要処理をなぜか１行削除するというコピペ操作ミスだと思われます、恥ずかしい（汗）))
-【fix】たまにタグ一覧やコンテンツ一覧でキャッシュされた情報を読み込んでしまう。
-【fix】Markdown記法でインラインのソースコード記述で、{<, >, &}がうまくエスケープされない。（Thanks to 手石]）
-【fix】最新Perl（5.20で確認）でMySQL, PostgreSQL運用時、データベースに格納される文字列が[em:通常のUTF8文字列にならない]。（[http://adiary.blog.abk.nu/0367:問題の詳細]）
-他

*Ver3.0β6 : 2015/05/17

-[bf:フッターの出力位置を変更しました]。
-記事編集画面から直接画像をアップロードできるようになりました。
-記事編集画面の入力部分にドラッグ＆ドロップしてファイルをアップロードできるようになりました。
-記事編集画面を洗練させました。
-FrontPage（固定トップページ）の時、記事タイトルをヘッダ出力しないように変更しました。
-システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
-表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
-スマホ判別に、BlackBerry と Windows Phone を加えました。
-コメント表示数の設定項目がなかったので修正。
-FrontPageのタイトル設定機能を追加。
-テーマを書きやすくするため、HTMLの出力構造を微修正しました。
-タグの編集、コンテンツ一覧の編集画面を少し使いやすくしました。
-HTML全体から「{{&nsbp;}}」を除去しました。
-検索結果画面の印刷表示ができるようになりました。（[http://adiary.blog.abk.nu/0359#com:Thanks to 手石]）
-【テーマ】base.cssを @import する仕様をやめました。((ファイルの場所も移動しました。importはCSS読み込み速度の面からも不利だと思われます。))
-【スマホ】記事編集を使いやすくしました。
-【スマホ】画像アルバムを使いやすくしました。
-【スマホ】システム画面の各所でスマホ用に表示を改善しました。
-【スマホ】ドラッグ＆ドロップエミュレーションを付けました（[http://adiary.blog.abk.nu/0365:詳細]）
-【スマホ】ヘッダに選択したメニューを出力できるようにしました。
-【スマホ】ヘッダに検索ボックスを出力するようにしました。
-【Markdown】[https://help.github.com/articles/github-flavored-markdown:GitHub Flavored Markdown]のテーブル記法等に対応しました。
-【Markdown】自動リンクをonにした場合、自動リンクするように変更しました。
-【Markdown】本家では、コードブロックの開始条件として手前が空行である必要があったので、その仕様に準拠しました。
-【Markdown】本家では、コードブロックの途中に空行を挟んでもokだったので、その仕様に準拠しました。
-【Markdown】【fix】HTMLブロック開始条件が間違っていた（行頭スペースを許可していた）。
-【Markdown】【fix】HTMLブロックの後ろに余計な空行が付いてしまう。
-【Markdown】【fix】文中に{{>}}等の記号があったときのエスケープ処理が正しくなかった。