@@ -1,5 +1,5 @@
 	<$ps = v.load_plgset('<@this>')>
-	<div data-module-name="<@this>" data-fix="1">
+	<div class="art-info" data-module-name="<@this>" data-fix="1">
 		<@ifexec(ps.hatena_bicon, begin)>
 		<a class="http-bookmark" href="http://b.hatena.ne.jp/entry/<@url>"><img src="http://b.st-hatena.com/entry/image/<@url>" alt="はてブ数"></a>
 		<$end>
