@@ -379,7 +379,7 @@ div.body h3 span.timestamp {
 	font-size:		100%;
 	font-weight:		normal;
 }
-div.body h3 a.linkall {
+div.body h3 a {
 	text-decoration:	none;
 }
 /* 小見出し */
