@@ -19,12 +19,15 @@
 -【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
 -【テーマ】satsuki2系テーマで、サイドバーサイズを固定にしました。
 -【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
+-【テーマ】CSSでの#hatena-bodyの高さ自動設定機能
+-【fix】adiary形式でexportするとき、入力テキストに「&lt;」などの実体参照が正しくエスケープされていなかった。((Version2時代からあったバグのようですのでたぶんずっと最初から……。))
+-【fix】pkey保存インポートをすると、コンテンツツリーを復元できない。
 -【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
 -【fix】行連結記法が使えない。((β3直後に完全にエンバグしてました。必要処理をなぜか１行削除するというコピペ操作ミスだと思われます、恥ずかしい（汗）))
 -【fix】たまにタグ一覧やコンテンツ一覧でキャッシュされた情報を読み込んでしまう。
 -【fix】Markdown記法でインラインのソースコード記述で、{<, >, &}がうまくエスケープされない。（Thanks to 手石]）
 -【fix】最新Perl（5.20で確認）でMySQL, PostgreSQL運用時、データベースに格納される文字列が[em:通常のUTF8文字列にならない]。（[http://adiary.blog.abk.nu/0367:問題の詳細]）
--他
+-他多数
 
 *Ver3.0β6 : 2015/05/17
 
